Get Eugenia tests working on Tycho